--- a/config.env
+++ b/config.env
@@ -2,3 +2,5 @@ NODE_ENV=development
 PORT=3000
 USERNAME=Eyob Mekonnen
 MONGODB_CONNECTION='mongodb://localhost:27017/natours'
+JWT_SECRETKEY=zeleke47mekonnen63eyob56
+JWT_EXPIRYDATE=10d
