--- a/config.env
+++ b/config.env
@@ -4,3 +4,7 @@ USERNAME=Eyob Mekonnen
 MONGODB_CONNECTION='mongodb://localhost:27017/natours'
 JWT_SECRETKEY=zeleke47mekonnen63eyob56
 JWT_EXPIRYDATE=10d
+EMAIL_USERNAME=ec9dacb21737f7
+EMAIL_PASSWORD=089cfb13b598a8
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=25
