--- a/config.env
+++ b/config.env
@@ -3,7 +3,8 @@ PORT=3000
 USERNAME=Eyob Mekonnen
 MONGODB_CONNECTION='mongodb://localhost:27017/natours'
 JWT_SECRETKEY=zeleke47mekonnen63eyob56
-JWT_EXPIRYDATE=10d
+JWT_EXPIRES_IN='30s',
+JWT_COOKIE_EXPIRES_IN=10
 EMAIL_USERNAME=ec9dacb21737f7
 EMAIL_PASSWORD=089cfb13b598a8
 EMAIL_HOST=sandbox.smtp.mailtrap.io
