starting data modeling

--- a/config.env
+++ b/config.env
@@ -3,7 +3,7 @@ PORT=3000
 USERNAME=Eyob Mekonnen
 MONGODB_CONNECTION='mongodb://localhost:27017/natours'
 JWT_SECRETKEY=zeleke47mekonnen63eyob56
-JWT_EXPIRES_IN='30s',
+JWT_EXPIRES_IN=90,
 JWT_COOKIE_EXPIRES_IN=10
 EMAIL_USERNAME=ec9dacb21737f7
 EMAIL_PASSWORD=089cfb13b598a8
